@@ -1190,9 +1190,6 @@ static void *merge_proxy_dir_config(apr_pool_t *p, void *basev, void *addv)
     new->cookie_domain_str = base->cookie_domain_str;
     new->interpolate_env = (add->interpolate_env == -1) ? base->interpolate_env
                                                         : add->interpolate_env;
-    new->ftp_directory_charset = add->ftp_directory_charset ?
-                                 add->ftp_directory_charset :
-                                 base->ftp_directory_charset;
     new->preserve_host = (add->preserve_host_set == 0) ? base->preserve_host
                                                         : add->preserve_host;
     new->preserve_host_set = add->preserve_host_set || base->preserve_host_set;
@@ -1890,15 +1887,6 @@ static const char *
     return NULL;
 }
 
-static const char *set_ftp_directory_charset(cmd_parms *cmd, void *dconf,
-                                             const char *arg)
-{
-    proxy_dir_conf *conf = dconf;
-
-    conf->ftp_directory_charset = arg;
-    return NULL;
-}
-
 static void ap_add_per_proxy_conf(server_rec *s, ap_conf_vector_t *dir_config)
 {
     proxy_server_conf *sconf = ap_get_module_config(s->module_config,
@@ -2106,8 +2094,6 @@ static const command_rec proxy_cmds[] =
      "Configure Status: proxy status to one of: on | off | full"),
     AP_INIT_RAW_ARGS("ProxySet", set_proxy_param, NULL, RSRC_CONF|ACCESS_CONF,
      "A balancer or worker name with list of params"),
-    AP_INIT_TAKE1("ProxyFtpDirCharset", set_ftp_directory_charset, NULL,
-     RSRC_CONF|ACCESS_CONF, "Define the character set for proxied FTP listings"),
     {NULL}
 };
 
