@@ -198,7 +198,6 @@ typedef struct {
     apr_array_header_t* cookie_domains;
     const apr_strmatch_pattern* cookie_path_str;
     const apr_strmatch_pattern* cookie_domain_str;
-    const char *ftp_directory_charset;
     int interpolate_env;
     int preserve_host;
     int preserve_host_set;
